src/test/deca/context/invalid/print_argument_type.deca
// Description:
//     print une valeur d'un mauvais type
//
// Resultats:
//    Ligne 11: Print argument in a wrong type
//
// Historique:
//    cree le 01/01/2023

{
   print(true);
}
